--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
-<!--Author: Template Stock
-Author URL: http://templatestock.co
--->
 <!DOCTYPE html>
 <html>
 <head>
-<title>Above Free Responsive Template | Template Stock</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="Onepage Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
@@ -39,7 +35,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<li><a class="active" href="index.html"><span data-hover="Home">home</span></a></li>
 				<li><a href="#about" class="scroll"><span data-hover="about">about</span></a></li>
 				<li><a href="#work" class="scroll"><span data-hover="work"><span>work</span></a></li>
-				<li><a href="#services" class="scroll"><span data-hover="services">services</span></a></li>
 				<li><a href="#contact" class="scroll"><span data-hover="contact">contact</span></a></li>
 				</nav>
 			 </ul>
@@ -59,9 +54,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				   <article style="position: absolute; width: 100%; opacity: 0;"> 
 				   	<div class="banner-wrap">
 				   	       	<div class="banner_center">
-				   		 		<h1>hello world,</h1> 
-				   		 		<h2>i am <span>graphic & web designer</span></h2>
-				   		 		<h2>from morocco</h2>
+				   		 		<h1>Welcome everybody</h1> 
+				   		 		<h2>i am Quynh Nguyen</h2>
+				   		 		<h2>an <span>Graphic Desinger</span></h2>
 				   		 		</div>
 				   		 </div>
 					</article>
